[package]
name = "YOLO-Terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.32.1" }
eframe = { version = "0.32.1" }
egui_extras = { version = "0.32.1" }
env_logger = { version = "0.11.8" }
mongodb = { version = "3.2.5" }
tokio = { version = "1.47.1", features = ["full"] }